--- a/vacation-spots-using-props-and-map/vacation/package.json
+++ b/vacation-spots-using-props-and-map/vacation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vacation-spots-using-props-and-map",
+  "name": "vacation",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
