--- a/text-detect/package.json
+++ b/text-detect/package.json
@@ -1,7 +1,6 @@
 {
   "name": "text-detect",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "dependencies": {
     "@google-cloud/vision": "^0.24.0",
@@ -18,5 +17,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
