--- a/server-madnaess/package.json
+++ b/server-madnaess/package.json
@@ -1,11 +1,11 @@
 {
   "name": "server-madnaess",
   "version": "1.0.0",
-  "description": "building a server Woo Hoo",
+  "description": "Building a server Woo Hoo",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "Neo",
