--- a/text-detect/package.json
+++ b/text-detect/package.json
@@ -7,8 +7,10 @@
     "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "mongoose": "^5.4.9",
     "nodemon": "^1.18.9",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "validator": "^10.11.0"
   },
   "devDependencies": {},
   "scripts": {
